--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(graphics,points)
 importFrom(graphics,strwidth)
 importFrom(graphics,text)
 importFrom(gridExtra,arrangeGrob)
+importFrom(import,from)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,divide_by)
