--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
     broom (>= 0.4.0),
     shiny (>= 0.13.2.9003),
     psych (>= 1.5.8),
+    import (>= 1.1.0),
     methods
 Suggests:
     devtools (>= 1.8.0),
