rename to basics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,7 +46,7 @@ export(prob_norm)
 export(prob_pois)
 export(prob_tdist)
 export(prob_unif)
-export(radiant.basic)
+export(radiant.basics)
 export(single_mean)
 export(single_prop)
 import(ggplot2)
