--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: radiant.basic
+Package: radiant.basics
 Type: Package
 Title: Basic analysis menu for Radiant. Builds on the radiant.data package
 Version: 0.1.0
@@ -24,8 +24,8 @@ Suggests:
     devtools (>= 1.8.0),
     testthat (>= 0.10.0),
     covr (>= 1.2.0)
-URL: https://github.com/radiant-rstats/radiant.basic, http://vnijs.github.io/radiant/
-BugReports: https://github.com/radiant-rstats/radiant.basic/issues
+URL: https://github.com/radiant-rstats/radiant.basics, http://vnijs.github.io/radiant/
+BugReports: https://github.com/radiant-rstats/radiant.basics/issues
 License: AGPL-3 | file LICENSE
 LazyData: true
 RoxygenNote: 5.0.1
