--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,6 @@ import(ggplot2)
 import(radiant.data)
 import(shiny)
 importFrom(broom,tidy)
-importFrom(dplyr,add_rownames)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,count)
@@ -120,6 +119,7 @@ importFrom(stats,setNames)
 importFrom(stats,symnum)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
+importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather_)
 importFrom(tidyr,spread_)
 importFrom(utils,combn)
