--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Imports:
 Suggests:
     testthat (>= 1.0.0),
     covr (>= 1.2.0)
-URL: https://github.com/radiant-rstats/radiant.basics, http://vnijs.github.io/radiant/
+URL: https://github.com/radiant-rstats/radiant.basics, https://radiant-rstats.github.io/docs
 BugReports: https://github.com/radiant-rstats/radiant.basics/issues
 License: AGPL-3 | file LICENSE
 LazyData: true
