--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: radiant.basics
 Type: Package
-Title: Basic analysis menu for Radiant. Builds on the radiant.data package
-Version: 0.5.10
-Date: 2016-9-7
+Title: Basics Menu for Radiant: Business Analytics using R and Shiny
+Version: 0.6.0
+Date: 2016-9-14
 Authors@R: person("Vincent", "Nijs", , "radiant@rady.ucsd.edu", c("aut", "cre"))
-Description: Basic analysis menu for Radiant.
+Description: The Radiant Basics menu includes interfaces for probability calculation, central limit theorem simulation, comparing means and proportions, goodness-of-fit testing, cross-tabs, and correlation. The application extends the functionality in radiant.data.
 Depends:
     R (>= 3.3.0),
-    radiant.data (>= 0.5.23)
+    radiant.data (>= 0.6.0)
 Imports:
     ggplot2 (>= 2.0.0),
     gridExtra (>= 2.0.0),
@@ -15,7 +15,7 @@ Imports:
     dplyr (>= 0.5),
     tidyr (>= 0.4.1),
     magrittr (>= 1.5),
-    shiny (>= 0.13.2.9003),
+    shiny (>= 0.14),
     psych (>= 1.5.8),
     import (>= 1.1.0),
     methods
