--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ sudo: required
 dist: trusty
 
 repos:
-  minicran: https://radiant-rstats.github.io/minicran/
+  CRAN: https://cloud.r-project.org
+  minicran: https://radiant-rstats.github.io/minicran
 
 r_github_packages:
   - kevinushey/sourcetools
