--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ sudo: required
 dist: trusty
 
 repos:
-  CRAN: https://cloud.r-project.org
   minicran: https://radiant-rstats.github.io/minicran
+  CRAN: https://cloud.r-project.org
 
 r_github_packages:
+  - radiant-rstats/radiant.data
   - kevinushey/sourcetools
