sampling for correlation plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(dplyr,rename_)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_each)
+importFrom(ggplot2,alpha)
 importFrom(graphics,pairs)
 importFrom(graphics,par)
 importFrom(graphics,points)
