--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,7 +70,7 @@ importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,strwidth)
 importFrom(graphics,text)
-importFrom(gridExtra,arrangeGrob)
+importFrom(gridExtra,grid.arrange)
 importFrom(import,from)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
