--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,10 +60,11 @@ importFrom(dplyr,filter_)
 importFrom(dplyr,funs)
 importFrom(dplyr,group_by_)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
 importFrom(dplyr,rename_)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
-importFrom(dplyr,summarise_each)
+importFrom(dplyr,summarise_all)
 importFrom(ggplot2,alpha)
 importFrom(graphics,pairs)
 importFrom(graphics,par)
