--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: radiant.basics
 Type: Package
 Title: Basics Menu for Radiant: Business Analytics using R and Shiny
-Version: 0.7.7
-Date: 2017-4-20
+Version: 0.8
+Date: 2017-4-25
 Authors@R: person("Vincent", "Nijs", , "radiant@rady.ucsd.edu", c("aut", "cre"))
 Description: The Radiant Basics menu includes interfaces for probability calculation, central limit theorem simulation, comparing means and proportions, goodness-of-fit testing, cross-tabs, and correlation. The application extends the functionality in radiant.data.
 Depends:
     R (>= 3.3.0),
-    radiant.data (>= 0.7.20)
+    radiant.data (>= 0.8.0)
 Imports:
     ggplot2 (>= 2.0.0),
     gridExtra (>= 2.0.0),
@@ -20,10 +20,9 @@ Imports:
     import (>= 1.1.0),
     methods
 Suggests:
-    testthat (>= 1.0.0),
-    covr (>= 1.2.0)
+    testthat (>= 1.0.0)
 URL: https://github.com/radiant-rstats/radiant.basics, https://radiant-rstats.github.io/docs
 BugReports: https://github.com/radiant-rstats/radiant.basics/issues
 License: AGPL-3 | file LICENSE
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
