accept table input

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(plot,compare_means)
 S3method(plot,compare_props)
-S3method(plot,correlation_)
+S3method(plot,correlation)
 S3method(plot,cross_tabs)
 S3method(plot,goodness)
 S3method(plot,prob_binom)
@@ -18,7 +18,7 @@ S3method(plot,single_mean)
 S3method(plot,single_prop)
 S3method(summary,compare_means)
 S3method(summary,compare_props)
-S3method(summary,correlation_)
+S3method(summary,correlation)
 S3method(summary,cross_tabs)
 S3method(summary,goodness)
 S3method(summary,prob_binom)
