--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,12 +56,11 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,count)
 importFrom(dplyr,filter)
-importFrom(dplyr,filter_)
 importFrom(dplyr,funs)
-importFrom(dplyr,group_by_)
+importFrom(dplyr,group_by_at)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
-importFrom(dplyr,rename_)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
