--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,6 @@ importFrom(stats,setNames)
 importFrom(stats,symnum)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
-importFrom(tidyr,gather_)
-importFrom(tidyr,spread_)
+importFrom(tidyr,gather)
+importFrom(tidyr,spread)
 importFrom(utils,combn)
