--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
 importFrom(methods,is)
 importFrom(psych,corr.test)
+importFrom(rstudioapi,viewer)
 importFrom(scales,percent)
 importFrom(stats,binom.test)
 importFrom(stats,chisq.test)
