--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,26 +1,27 @@
 Package: radiant.basics
 Type: Package
 Title: Basics Menu for Radiant: Business Analytics using R and Shiny
-Version: 0.8.7.5
-Date: 2017-10-19
+Version: 0.8.9
+Date: 2017-12-23
 Authors@R: person("Vincent", "Nijs", , "radiant@rady.ucsd.edu", c("aut", "cre"))
 Description: The Radiant Basics menu includes interfaces for probability calculation, central limit theorem simulation, comparing means and proportions, goodness-of-fit testing, cross-tabs, and correlation. The application extends the functionality in radiant.data.
 Depends:
     R (>= 3.3.0),
-    radiant.data (>= 0.8.7.4)
+    radiant.data (>= 0.8.9)
 Imports:
-    ggplot2 (>= 2.1.0),
+    ggplot2 (>= 2.2.1),
     gridExtra (>= 2.0.0),
     scales (>= 0.4.0),
-    dplyr (>= 0.7.2),
-    tidyr (>= 0.7),
+    dplyr (>= 0.7.4),
+    tidyr (>= 0.7.2),
     magrittr (>= 1.5),
     shiny (>= 1.0.5),
     psych (>= 1.6.6),
     import (>= 1.1.0),
+    rstudioapi (>= 0.7),
     methods
 Suggests:
-    testthat (>= 1.0.0)
+    testthat (>= 2.0.0)
 URL: https://github.com/radiant-rstats/radiant.basics, https://radiant-rstats.github.io/docs
 BugReports: https://github.com/radiant-rstats/radiant.basics/issues
 License: AGPL-3 | file LICENSE
