--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(prob_pois)
 export(prob_tdist)
 export(prob_unif)
 export(radiant.basics)
+export(radiant.basics_viewer)
 export(single_mean)
 export(single_prop)
 import(ggplot2)
@@ -80,7 +81,7 @@ importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
 importFrom(methods,is)
 importFrom(psych,corr.test)
-importFrom(rstudioapi,viewer)
+importFrom(radiant.data,launch)
 importFrom(scales,percent)
 importFrom(stats,binom.test)
 importFrom(stats,chisq.test)
