--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(plot,prob_chisq)
 S3method(plot,prob_disc)
 S3method(plot,prob_expo)
 S3method(plot,prob_fdist)
+S3method(plot,prob_lnorm)
 S3method(plot,prob_norm)
 S3method(plot,prob_pois)
 S3method(plot,prob_tdist)
@@ -26,6 +27,7 @@ S3method(summary,prob_chisq)
 S3method(summary,prob_disc)
 S3method(summary,prob_expo)
 S3method(summary,prob_fdist)
+S3method(summary,prob_lnorm)
 S3method(summary,prob_norm)
 S3method(summary,prob_pois)
 S3method(summary,prob_tdist)
@@ -42,6 +44,7 @@ export(prob_chisq)
 export(prob_disc)
 export(prob_expo)
 export(prob_fdist)
+export(prob_lnorm)
 export(prob_norm)
 export(prob_pois)
 export(prob_tdist)
@@ -91,6 +94,7 @@ importFrom(stats,dbinom)
 importFrom(stats,dchisq)
 importFrom(stats,dexp)
 importFrom(stats,df)
+importFrom(stats,dlnorm)
 importFrom(stats,dnorm)
 importFrom(stats,dpois)
 importFrom(stats,dt)
@@ -101,6 +105,7 @@ importFrom(stats,pbinom)
 importFrom(stats,pchisq)
 importFrom(stats,pexp)
 importFrom(stats,pf)
+importFrom(stats,plnorm)
 importFrom(stats,pnorm)
 importFrom(stats,ppois)
 importFrom(stats,prop.test)
@@ -110,6 +115,7 @@ importFrom(stats,qbinom)
 importFrom(stats,qchisq)
 importFrom(stats,qexp)
 importFrom(stats,qf)
+importFrom(stats,qlnorm)
 importFrom(stats,qnorm)
 importFrom(stats,qpois)
 importFrom(stats,qt)
