--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(plot,prob_tdist)
 S3method(plot,prob_unif)
 S3method(plot,single_mean)
 S3method(plot,single_prop)
+S3method(print,correlation)
 S3method(summary,compare_means)
 S3method(summary,compare_props)
 S3method(summary,correlation)
@@ -64,6 +65,7 @@ importFrom(dplyr,funs)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
