--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,10 @@ Title: Basics Menu for Radiant: Business Analytics using R and Shiny
 Version: 0.9.0.4
 Date: 2018-3-11
 Authors@R: person("Vincent", "Nijs", , "radiant@rady.ucsd.edu", c("aut", "cre"))
-Description: The Radiant Basics menu includes interfaces for probability calculation, central limit theorem simulation, comparing means and proportions, goodness-of-fit testing, cross-tabs, and correlation. The application extends the functionality in radiant.data.
+Description: The Radiant Basics menu includes interfaces for probability 
+    calculation, central limit theorem simulation, comparing means and proportions, 
+    goodness-of-fit testing, cross-tabs, and correlation. The application extends 
+    the functionality in radiant.data.
 Depends:
     R (>= 3.3.0),
     radiant.data (>= 0.9.0.17)
