--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ warnings_are_errors: true
 sudo: required
 dist: trusty
 
+repos:
+  - CRAN: "https://radiant-rstats.github.io/minicran
+
 r_packages:
   - devtools
 
