--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: r
+r:
+  - release
+  - devel
 warnings_are_errors: true
 sudo: required
 dist: trusty
 
 repos:
-  - CRAN: "https://radiant-rstats.github.io/minicran
+  - CRAN: https://radiant-rstats.github.io/minicran
 
 r_packages:
   - devtools
-
-r_github_packages:
-  - radiant-rstats/radiant.data
