--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ warnings_are_errors: true
 sudo: required
 dist: trusty
 
-repos:
-  - CRAN: https://radiant-rstats.github.io/minicran
-
 r_packages:
   - devtools
+
+r_github_packages:
+  - trestletech/shinyAce
+  - rstudio/rstudioapi
