--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ r:
   - devel
 warnings_are_errors: true
 sudo: required
+dist: trusty
 
 r_packages:
   - devtools
 
 r_github_packages:
-  - trestletech/shinyAce
-  - rstudio/rstudioapi
+  - radiant-rstats/radiant.data
