--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,36 @@
+navbar:
+  title: "radiant.basics"
+  left:
+    - icon: fa-home fa-lg
+      href: index.html
+    - text: "Reference"
+      href: reference/index.html
+    - text: "Articles"
+      href: articles/index.html
+    - text: "Changelog"
+      href: news/index.html
+    - text: "Other Packages"
+      menu:
+        - text: "radiant"
+          href: https://radiant-rstats.github.io/radiant/
+        - text: "radiant.data"
+          href: https://radiant-rstats.github.io/radiant.data/
+        - text: "radiant.design"
+          href: https://radiant-rstats.github.io/radiant.design/
+        - text: "radiant.basics"
+          href: https://radiant-rstats.github.io/radiant.basics/
+        - text: "radiant.model"
+          href: https://radiant-rstats.github.io/radiant.model/
+        - text: "radiant.multivariate"
+          href: https://radiant-rstats.github.io/radiant.multivariate/
+        - text: "docker"
+          href: https://github.com/radiant-rstats/docker
+  right:
+   - icon: fa-twitter fa-lg
+     href: https://twitter.com/vrnijs
+   - icon: fa-github fa-lg
+     href: https://github.com/radiant-rstats
+
 reference:
 - title: Basics > Probability
   desc: Functions used with the Probability Calculator and the Central Limit Theorem simulator
@@ -80,6 +113,8 @@ reference:
     - radiant.basics_window
 articles:
 - title: Basics Menu
+  desc: >
+    These vignettes provide an introduction to the Basics menu in radiant
   contents:
     - pkgdown/clt
     - pkgdown/prob_calc
