--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ S3method(plot,prob_tdist)
 S3method(plot,prob_unif)
 S3method(plot,single_mean)
 S3method(plot,single_prop)
-S3method(print,correlation)
+S3method(print,rcorr)
 S3method(summary,compare_means)
 S3method(summary,compare_props)
 S3method(summary,correlation)
