--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,7 @@ Imports:
     magrittr (>= 1.5),
     shiny (>= 1.1.0),
     psych (>= 1.8.3.3),
-    import (>= 1.1.0),
-    methods
+    import (>= 1.1.0)
 Suggests:
     testthat (>= 2.0.0)
 URL: https://github.com/radiant-rstats/radiant.basics, 
