--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     psych (>= 1.8.3.3),
     import (>= 1.1.0)
 Suggests:
-    testthat (>= 2.0.0)
+    testthat (>= 2.0.0),
+    pkgdown (>= 1.1.0)
 URL: https://github.com/radiant-rstats/radiant.basics, 
   https://radiant-rstats.github.io/radiant.basics,
   https://radiant-rstats.github.io/docs
