--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ r_packages:
 r_github_packages:
   - radiant-rstats/radiant.data
 
+## based on https://www.datacamp.com/community/tutorials/cd-package-docs-pkgdown-travis
 after_success:
   - Rscript -e 'pkgdown::build_site()'
 
