support vectors of fractions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(compare_props)
 export(correlation)
 export(cross_tabs)
 export(goodness)
+export(make_vec)
 export(prob_binom)
 export(prob_chisq)
 export(prob_disc)
@@ -60,6 +61,7 @@ export(single_prop)
 import(ggplot2)
 import(radiant.data)
 import(shiny)
+importFrom(MASS,fractions)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,count)
@@ -88,6 +90,7 @@ importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
 importFrom(psych,corr.test)
+importFrom(radiant.data,is_empty)
 importFrom(radiant.data,launch)
 importFrom(scales,percent)
 importFrom(stats,binom.test)
