--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: radiant.basics
 Type: Package
 Title: Basics Menu for Radiant: Business Analytics using R and Shiny
-Version: 1.1.0
-Date: 2019-9-5
+Version: 1.1.1
+Date: 2019-10-9
 Authors@R: person("Vincent", "Nijs", , "radiant@rady.ucsd.edu", c("aut", "cre"))
 Description: The Radiant Basics menu includes interfaces for probability 
     calculation, central limit theorem simulation, comparing means and proportions, 
@@ -10,7 +10,7 @@ Description: The Radiant Basics menu includes interfaces for probability
     the functionality in radiant.data.
 Depends:
     R (>= 3.4.0),
-    radiant.data (>= 1.1.0)
+    radiant.data (>= 1.1.5)
 Imports:
     ggplot2 (>= 2.2.1),
     gridExtra (>= 2.0.0),
@@ -20,7 +20,8 @@ Imports:
     magrittr (>= 1.5),
     shiny (>= 1.2.0),
     psych (>= 1.8.3.3),
-    import (>= 1.1.0)
+    import (>= 1.1.0),
+    MASS
 Suggests:
     testthat (>= 2.0.0),
     pkgdown (>= 1.1.0)
