--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,7 +42,6 @@ export(compare_props)
 export(correlation)
 export(cross_tabs)
 export(goodness)
-export(make_vec)
 export(prob_binom)
 export(prob_chisq)
 export(prob_disc)
@@ -61,13 +60,13 @@ export(single_prop)
 import(ggplot2)
 import(radiant.data)
 import(shiny)
-importFrom(MASS,fractions)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,count)
 importFrom(dplyr,filter)
 importFrom(dplyr,funs)
 importFrom(dplyr,group_by_at)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_if)
@@ -75,6 +74,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
+importFrom(dplyr,summarise_at)
 importFrom(ggplot2,alpha)
 importFrom(graphics,pairs)
 importFrom(graphics,par)
@@ -90,7 +90,6 @@ importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
 importFrom(psych,corr.test)
-importFrom(radiant.data,is_empty)
 importFrom(radiant.data,launch)
 importFrom(scales,percent)
 importFrom(stats,binom.test)
