--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: radiant.basics
 Type: Package
 Title: Basics Menu for Radiant: Business Analytics using R and Shiny
-Version: 1.1.4
-Date: 2019-10-16
+Version: 1.2.0
+Date: 2019-10-25
 Authors@R: person("Vincent", "Nijs", , "radiant@rady.ucsd.edu", c("aut", "cre"))
 Description: The Radiant Basics menu includes interfaces for probability 
     calculation, central limit theorem simulation, comparing means and proportions, 
@@ -10,7 +10,7 @@ Description: The Radiant Basics menu includes interfaces for probability
     the functionality in radiant.data.
 Depends:
     R (>= 3.4.0),
-    radiant.data (>= 1.1.5)
+    radiant.data (>= 1.2.0)
 Imports:
     ggplot2 (>= 2.2.1),
     gridExtra (>= 2.0.0),
@@ -18,10 +18,9 @@ Imports:
     dplyr (>= 0.8.3),
     tidyr (>= 0.8.2),
     magrittr (>= 1.5),
-    shiny (>= 1.2.0),
+    shiny (>= 1.4.0),
     psych (>= 1.8.3.3),
-    import (>= 1.1.0),
-    MASS
+    import (>= 1.1.0)
 Suggests:
     testthat (>= 2.0.0),
     pkgdown (>= 1.1.0)
