--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,9 +36,11 @@ S3method(summary,prob_tdist)
 S3method(summary,prob_unif)
 S3method(summary,single_mean)
 S3method(summary,single_prop)
+export(.mixedCor_cpd)
 export(clt)
 export(compare_means)
 export(compare_props)
+export(cor2df)
 export(correlation)
 export(cross_tabs)
 export(goodness)
@@ -90,6 +92,7 @@ importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
 importFrom(psych,corr.test)
+importFrom(psych,mixedCor)
 importFrom(radiant.data,launch)
 importFrom(scales,percent)
 importFrom(stats,binom.test)
