--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ importFrom(graphics,strwidth)
 importFrom(graphics,text)
 importFrom(gridExtra,grid.arrange)
 importFrom(import,from)
+importFrom(lubridate,is.Date)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,divide_by)
