--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     magrittr (>= 1.5),
     shiny (>= 1.4.0),
     psych (>= 1.8.3.3),
-    import (>= 1.1.0)
+    import (>= 1.1.0),
+    lubridate (>= 1.7.4)
 Suggests:
     testthat (>= 2.0.0),
     pkgdown (>= 1.1.0)
