--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,6 @@ S3method(summary,prob_tdist)
 S3method(summary,prob_unif)
 S3method(summary,single_mean)
 S3method(summary,single_prop)
-export(.mixedCor_cpd)
 export(clt)
 export(compare_means)
 export(compare_props)
@@ -92,8 +91,8 @@ importFrom(magrittr,divide_by)
 importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
+importFrom(polycor,hetcor)
 importFrom(psych,corr.test)
-importFrom(psych,mixedCor)
 importFrom(radiant.data,launch)
 importFrom(scales,percent)
 importFrom(stats,binom.test)
