--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     shiny (>= 1.4.0),
     psych (>= 1.8.3.3),
     import (>= 1.1.0),
-    lubridate (>= 1.7.4)
+    lubridate (>= 1.7.4),
+    polycor (>= 0.7.10)
 Suggests:
     testthat (>= 2.0.0),
     pkgdown (>= 1.1.0)
