--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ import(radiant.data)
 import(shiny)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,count)
 importFrom(dplyr,filter)
 importFrom(dplyr,funs)
@@ -82,7 +83,6 @@ importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,strwidth)
 importFrom(graphics,text)
-importFrom(gridExtra,grid.arrange)
 importFrom(import,from)
 importFrom(lubridate,is.Date)
 importFrom(magrittr,"%<>%")
@@ -91,6 +91,8 @@ importFrom(magrittr,divide_by)
 importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
+importFrom(patchwork,plot_annotation)
+importFrom(patchwork,wrap_plots)
 importFrom(polycor,hetcor)
 importFrom(psych,corr.test)
 importFrom(radiant.data,launch)
