back to grid.arrange

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,strwidth)
 importFrom(graphics,text)
+importFrom(gridExtra,grid.arrange)
 importFrom(import,from)
 importFrom(lubridate,is.Date)
 importFrom(magrittr,"%<>%")
