new correlation plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,7 +63,6 @@ import(radiant.data)
 import(shiny)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
-importFrom(dplyr,bind_rows)
 importFrom(dplyr,count)
 importFrom(dplyr,filter)
 importFrom(dplyr,funs)
@@ -77,9 +76,9 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,summarise_at)
-importFrom(ggplot2,alpha)
 importFrom(graphics,pairs)
 importFrom(graphics,par)
+importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,strwidth)
 importFrom(graphics,text)
