--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: radiant.basics
 Type: Package
 Title: Basics Menu for Radiant: Business Analytics using R and Shiny
-Version: 1.3.5
-Date: 2020-8-15
+Version: 1.4.0
+Date: 2021-6-2
 Authors@R: person("Vincent", "Nijs", , "radiant@rady.ucsd.edu", c("aut", "cre"))
 Description: The Radiant Basics menu includes interfaces for probability 
     calculation, central limit theorem simulation, comparing means and proportions, 
@@ -22,10 +22,11 @@ Imports:
     import (>= 1.1.0),
     lubridate (>= 1.7.4),
     polycor (>= 0.7.10),
-    patchwork (>= 1.0.0)
+    patchwork (>= 1.0.0),
+    rmarkdown (>= 2.0.0)
 Suggests:
     testthat (>= 2.0.0),
-    pkgdown (>= 1.1.0)
+    pkgdown (>= 1.1.0),
 URL: https://github.com/radiant-rstats/radiant.basics, 
   https://radiant-rstats.github.io/radiant.basics,
   https://radiant-rstats.github.io/docs
