--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: radiant.basics
 Type: Package
 Title: Basics Menu for Radiant: Business Analytics using R and Shiny
-Version: 1.4.4
-Date: 2022-7-22
+Version: 1.5.0
+Date: 2023-1-5
 Authors@R: person("Vincent", "Nijs", , "radiant@rady.ucsd.edu", c("aut", "cre"))
 Description: The Radiant Basics menu includes interfaces for probability 
     calculation, central limit theorem simulation, comparing means and proportions, 
     goodness-of-fit testing, cross-tabs, and correlation. The application extends 
     the functionality in 'radiant.data'.
 Depends:
-    R (>= 3.4.0),
+    R (>= 4.0.0),
     radiant.data (>= 1.4.4)
 Imports:
     ggplot2 (>= 2.2.1),
@@ -22,11 +22,12 @@ Imports:
     import (>= 1.1.0),
     lubridate (>= 1.7.4),
     polycor (>= 0.7.10),
-    patchwork (>= 1.0.0)
+    patchwork (>= 1.0.0),
+    rlang (>= 1.0.6)
 Suggests:
     testthat (>= 2.0.0),
     pkgdown (>= 1.1.0),
-    markdown
+    markdown (>= 1.3)
 URL: https://github.com/radiant-rstats/radiant.basics/, 
   https://radiant-rstats.github.io/radiant.basics/,
   https://radiant-rstats.github.io/docs/
@@ -35,4 +36,4 @@ License: AGPL-3 | file LICENSE
 LazyData: true
 Encoding: UTF-8
 Language: en-US
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
